# qloudsync

./: .gitignore  AssemblyDependencies1.dgml  QloudSync.sln  QloudSyncLIN.sln  QloudSyncMAC.sln  QloudSyncWIN.sln  README.md  commands_debian
CoreBasicsTests/: CoreBasicsTests.csproj  UnitTest1.cs
Documentation/: Activity Flow - Download Sync v0.6.pptx
QloudSync/: Info.plist  Program.cs  QloudSync.csproj  QloudSync.sln  SparkleUI.cs  app.config  qloudsync.config
QloudSyncCore/: QloudSync.vdb4  QloudSyncCore.csproj  QloudSyncCoreLIN.csproj  QloudSyncCoreMAC.csproj  QloudSyncCoreWIN.csproj
QloudSyncLIN/: Backgrounds.Designer.cs  Program.cs  QloudSyncLIN.csproj  app.desktop  qloudsync.config
QloudSyncMAC/: Info.plist  MainMenu.xib  MainMenu.xib.designer.cs  Program.cs  QloudSync.sln  QloudSyncMAC.csproj  SparkleSetup2.cs  SparkleSetup2.designer.cs  SparkleSetup2.xib  qloudsync.conf  qloudsync.config
QloudSyncWIN/: AppDelegate.cs  Backgrounds.Designer.cs  Backgrounds.resx  Icons.Designer.cs  Icons.resx  Program.cs  QloudSyncWIN.csproj  QloudSyncWIN_TemporaryKey.pfx  app.config  qloudsync.conf  (+3 more)
Source Code/SparkleLib/SQ/: AssemblyInfo.cs  Authentication.cs  BacklogSynchronizer.cs  Change.cs  ConnectionManager.cs  Constant.cs  Credential.cs  DownloadSynchronizer.cs  File.cs  Folder.cs  LocalFile.cs  LocalRepo.cs  Logger.cs  Makefile.am  OSXFileWatcher.cs  QloudSyncPlugin.cs  RemoteFile.cs  RemoteRepo.cs  Repo.cs  SparkleFetcherQS.cs  SparkleLib.SQ.csproj  SparkleLib.SQ.sln  SparkleRepoQS.cs  Sync.cs  SyncStatus.cs  Synchronizer.cs  UploadSynchronizer.cs
(+537 files in other folders)
